--- a/index.html
+++ b/index.html
@@ -1254,7 +1254,7 @@
                     document.getElementById("quote").innerHTML = txt;
                 txt2 = txt;
             } else if (H < 23) {
-                txt = 'Aku mau call...';
+                txt = 'Kamu gmw call aku apa...';
                 if (txt != txt2 && !starting)
                     document.getElementById("quote").innerHTML = txt;
                 txt2 = txt;
